# scoville-vision

./: .gitignore  COMPLIANCE.md  Dockerfile  Makefile  README.md  pyproject.toml
src/scoville_vision/: __init__.py  main.py  models.py  vision.py
tests/: test_smoke.py
