[project]
name = "scoville-vision"
version = "0.1.0"
description = "Face detection and embedding microservice for the Scoville analytics platform."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [
    { name = "Essor Digital" },
]

dependencies = [
    "ultralytics>=8.3,<9",
    "opencv-python>=4.10",
    "mediapipe>=0.10",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "numpy>=1.26",
    "Pillow>=10",
    "python-multipart>=0.0.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
    "ruff>=0.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/scoville_vision"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
